Change #projects padding to 0 to solve wiggliness on mobile

--- a/css/main.css
+++ b/css/main.css
@@ -92,7 +92,7 @@ h2 {
 }
 
 #projects {
-/*    padding: 1em 2em;*/
+    padding: 0
 }
 
 #projects h2 {
